# Chip-8-Emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  chip8.cpp  cpu.py  main.py  rom.py  video.py  virtual_machine.cpp  virtual_machine.h
src/: main.rs  test.rs
www/: index.css  index.html  index.js
www/roms/: jason.ch8
